test/corpus/eu4_mod.txt
====================
[mod](name) basic
====================
name="Vanilla Wolf Pack"
------

(file
  (dot_mod
    (mod_name_identifier)
    (assign_equal)
    (mod_name_value) ))


====================
[mod](name) eol
====================

name="Vanilla Wolf Pack"

------

(file
  (dot_mod
    (mod_name_identifier)
    (assign_equal)
    (mod_name_value) ))


====================
[mod](tags) basic
====================
tags={
  "Fixes"
}
------

(file
  (dot_mod
    (identifier)
    (assign_equal)
    (tags_keyword) ))


====================
[mod](tags) eol
====================

tags={
  "Fixes"
}

------

(file
  (dot_mod
    (identifier)
    (assign_equal)
    (tags_keyword) ))


====================
[mod](tags) multi args
====================
tags={
  "Alternative History"
  "Loading Screen"
  "Missions And Decisions"
}
------

(file
  (dot_mod
    (identifier)
    (assign_equal)
    (tags_keyword)
    (tags_keyword)
    (tags_keyword) ))


====================
[mod](dependencies) basic
====================
dependencies={
	"Better UI 2"
	"Vanilla'd - The Grand Exhibition 1/6"
}
------

(file
  (dot_mod
    (identifier)
    (assign_equal)
    (dependencies)
    (dependencies) ))
